--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     }
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
     "@dhaiwat10/react-link-preview": "^1.12.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@notionhq/client": "^0.4.0",
     "@types/mermaid": "^8.2.7",
     "@zeit/react-jsx-parser": "^2.0.0",
     "async-sema": "^3.1.0",
+    "framer-motion": "^6",
     "fs-extra": "^10.0.0",
     "github-slugger": "^1.2.1",
     "mermaid": "^8.14.0",
